PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_NDC_Change__c.object
<CustomObject>
    <fields>
        <fullName>Current_Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to store Product Family Lookup from Product Master</inlineHelpText>
        <label>Current Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>NDC Changes</relationshipLabel>
        <relationshipName>NDC_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed-Contracts</fullName>
                </value>
                <value>
                    <fullName>Closed-Country Head</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer&apos;s Update</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer Service</fullName>
                </value>
                <value>
                    <fullName>Closed-Draft</fullName>
                </value>
                <value>
                    <fullName>Closed-Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing &amp; Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Lead</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Lead SRx</fullName>
                </value>
                <value>
                    <fullName>Closed-Sales &amp; Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Closed-SCM &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Closed-Sr Director or VP Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-SRx IPA Contracts Approver</fullName>
                </value>
                <value>
                    <fullName>Closed-Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Closed-Vistex Update</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Contracts Rejected</fullName>
                </value>
                <value>
                    <fullName>Country Head</fullName>
                </value>
                <value>
                    <fullName>Country Head Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Update</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Update Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Customer Service Rejected</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Finance Rejected</fullName>
                </value>
                <value>
                    <fullName>Home Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Product_Family__c</fullName>
        <label>Current Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Date__c</fullName>
        <label>Due Date to Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_Change_Name__c</fullName>
        <label>NDC Change Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_Closed_Date__c</fullName>
        <label>NDC Change Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_Submitted_Date__c</fullName>
        <label>NDC Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Product_Family__c</fullName>
        <label>Proposed Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to store Proposed Product Family lookup from Product Master</inlineHelpText>
        <label>Proposed Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>NDC Changes (Proposed Product Family)</relationshipLabel>
        <relationshipName>NDC_Changes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NDC Change</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_NDC_Change_Name__c</columns>
        <columns>Phoenix_Current_Product_Family__c</columns>
        <columns>Phoenix_Proposed_Product_Family__c</columns>
        <columns>Phoenix_Description__c</columns>
        <columns>Phoenix_Date__c</columns>
        <columns>Phoenix_Approval_Status__c</columns>
        <columns>Phoenix_NDC_Submitted_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Closed_NDC_Changes</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_NDC_Change_Name__c</columns>
        <columns>Phoenix_Current_Product_Family__c</columns>
        <columns>Phoenix_Proposed_Product_Family__c</columns>
        <columns>Phoenix_Approval_Status__c</columns>
        <columns>Phoenix_Date__c</columns>
        <columns>Phoenix_Description__c</columns>
        <columns>Phoenix_NDC_Submitted_Date__c</columns>
        <columns>Phoenix_NDC_Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed NDC Changes</label>
    </listViews>
    <listViews>
        <fullName>Open_NDC_Changes</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_NDC_Change_Name__c</columns>
        <columns>Phoenix_Current_Product_Family__c</columns>
        <columns>Phoenix_Proposed_Product_Family__c</columns>
        <columns>Phoenix_Approval_Status__c</columns>
        <columns>Phoenix_Date__c</columns>
        <columns>Phoenix_Description__c</columns>
        <columns>Phoenix_NDC_Submitted_Date__c</columns>
        <columns>Phoenix_NDC_Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Open NDC Changes</label>
    </listViews>
    <nameField>
        <displayFormat>NDC Change-{0000000}</displayFormat>
        <label>NDC Change No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NDC Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>